--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\Pak Aji\\AppData\\Local\\Android\\sdk
-flutter.sdk=D:\\Flutter\\flutter
+sdk.dir=D:\\sdk
+flutter.sdk=D:\\fluttersdk\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
